--- a/bethehero.web/src/views/global.css
+++ b/bethehero.web/src/views/global.css
@@ -33,7 +33,7 @@ form textarea {
     width: 100%;
     resize: vertical;
     min-height: 140px;
-    color: #3333;
+    color: #b3b2b1;
     border: 1px solid #dcdce6;
     border-radius: 8px;
     padding: 16px 24px;
